LPD-59101 SF, centralize all Sidecar logging configs to log4j2-sidecar.properties